--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,6 @@
 {
   "extends": ["react-app"],
   "rules": {
-    "no-console": "error"
-  },
-  "lint": "eslint --ext .js,.jsx ."
+    "no-console": "off"
+  }
 }
